--- a/index.html
+++ b/index.html
@@ -15,5 +15,18 @@
       <h1>marcusnielsen.org</h1>
       
     </div>
+    <script type="text/javascript">
+      WebFontConfig = {
+        google: { families: [ 'Source+Sans+Pro::latin', 'Fjalla+One::latin', 'Indie+Flower::latin' ] }
+      };
+      (function() {
+        var wf = document.createElement('script');
+        wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+      })(); 
+  </script>
   </body>
 </html>
