--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
   </head>
   <body>
     <div class="container-fluid">
-      
       <h1>marcusnielsen.org</h1>
+      <div class="menu">
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a href="#about">about mn</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#projects">mn-projects</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#contact">contact mn</a>
+            </li>
+          </ul>
+      </div>
       <h2>About me</h2>
       <p>lorem</p>
 
