--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             </li>
           </ul>
       </div>
-      <h2>About me</h2>
+      <h2>about mn</h2>
       <p>lorem</p>
 
-      <h2>Projects</h2>
+      <h2>mn-projects</h2>
       <p>lorem</p>
       
-      <h2>Contact me</h2>
+      <h2>contact mn</h2>
       <p><em>lorem</em></p>
       
     </div>
