--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   </head>
   <body>
     <div class="container-fluid">
-      <h1>marcusnielsen.org</h1>
+      <h1>
+        <a href="#">marcusnielsen_org</a>
+      </h1>
       <div class="menu">
           <ul class="list-inline">
             <li class="list-inline-item">
@@ -38,7 +40,7 @@
     </div>
     <script type="text/javascript">
       WebFontConfig = {
-        google: { families: [ 'Source+Sans+Pro::latin', 'Fjalla+One::latin', 'Indie+Flower::latin' ] }
+        google: { families: [ 'Source+Sans+Pro::latin', 'Share+Tech+Mono::latin' ] }
       };
       (function() {
         var wf = document.createElement('script');
