--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container-fluid">
       <h1>
-        <a href="#">marcusnielsen_org</a>
+        <a href="#" data-title></a>
       </h1>
       <div class="menu">
           <ul class="list-inline">
@@ -51,5 +51,7 @@
         s.parentNode.insertBefore(wf, s);
       })(); 
   </script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/4.1.0/rx.all.compat.js"></script>
+  <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
