--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
       <div class="menu">
           <ul class="list-inline">
             <li class="list-inline-item">
-              <a href="#about">about mn</a>
+              <a href="#about">about</a>
             </li>
             <li class="list-inline-item">
-              <a href="#projects">mn-projects</a>
+              <a href="#projects">projects</a>
             </li>
             <li class="list-inline-item">
-              <a href="#contact">contact mn</a>
+              <a href="#contact">contact</a>
             </li>
           </ul>
       </div>
-      <h2>about mn</h2>
+      <h2>about</h2>
       <p>lorem</p>
 
-      <h2>mn-projects</h2>
+      <h2>projects</h2>
       <p>lorem</p>
       
-      <h2>contact mn</h2>
+      <h2>contact</h2>
       <p><em>lorem</em></p>
       
     </div>
