--- a/index.html
+++ b/index.html
@@ -7,40 +7,41 @@
     <title>marcusnielsen.org</title>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container-fluid">
-      <h1>
-        <a href="#" data-title></a>
-      </h1>
+    <div class="wrapper">
       <div class="menu">
-          <ul class="list-inline">
-            <li class="list-inline-item">
-              <a href="#about">about</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#projects">projects</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#contact">contact</a>
-            </li>
-          </ul>
+        <h1 class="title">
+          <a href="#" data-title></a>
+        </h1>
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <a href="#about">about</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#projects">projects</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#contact">contact</a>
+          </li>
+        </ul>
       </div>
-      <h2>about</h2>
+      <h2 id="about">about</h2>
       <p>lorem</p>
+      <div style="height: 1000px;"></div>
 
-      <h2>projects</h2>
+      <h2 id="projects">projects</h2>
       <p>lorem</p>
       
-      <h2>contact</h2>
+      <h2 id="contact">contact</h2>
       <p><em>lorem</em></p>
       
     </div>
     <script type="text/javascript">
       WebFontConfig = {
-        google: { families: [ 'Source+Sans+Pro::latin', 'Share+Tech+Mono::latin' ] }
+        google: { families: [ 'Share+Tech+Mono::latin' ] }
       };
       (function() {
         var wf = document.createElement('script');
@@ -51,7 +52,7 @@
         s.parentNode.insertBefore(wf, s);
       })(); 
   </script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/4.1.0/rx.all.compat.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/4.1.0/rx.all.js"></script>
   <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
