--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
         </h1>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="#about">about</a>
+            <a href="#about">std:out</a>
           </li>
           <li class="list-inline-item">
-            <a href="#projects">projects</a>
+            <a href="#projects">inventions</a>
           </li>
           <li class="list-inline-item">
-            <a href="#contact">contact</a>
+            <a href="#contact">mailboxes</a>
           </li>
         </ul>
       </div>
       <div class="section">
-        <h2 id="about">about</h2>
+        <h2 id="about">std:out</h2>
         <div class="profile">
           <img class="profile-preview" src="profile.jpeg" alt="profile">
           <img class="profile-original" src="profile-original.jpeg" alt="profile">  
@@ -40,22 +40,43 @@
         </p>  
       </div>
       <div class="section">
-        <h2 id="projects">projects</h2>
-        <p>
-          mn-tournament: <a target="_blank" href="https://mn-tournament.firebaseapp.com">
-          mn-tournament.firebaseapp.com
-          </a>
-          login: temp@temp.xx
-          password: temp
-        </p>
-        <p>
-          rxjs-server: <a target="_blank" href="https://github.com/marcusnielsen/rxjs-server/tree/master/web-application">
-            github.com/marcusnielsen/rxjs-server/tree/master/web-application
-          </a>
-        </p>
+        <h2 id="projects">inventions</h2>
+            <ul class="projects">
+                <li>
+                    <div class="project-title">
+                        <a target="_blank" href="https://mn-tournament.firebaseapp.com">
+                            mn-tournament
+                        </a>        
+                    </div>
+               <div class="project-body">
+                   <div>
+                       A favourite project put on ice until rxjs-server is ready to replace firebase.
+                   </div>
+                   <br>
+                    <div>
+                        login: temp@temp.xx    
+                    </div>
+                    <div>
+                        password: temp  
+                    </div>     
+                </div> 
+            </li>
+            <li>
+                <div class="project-title">
+                    <a target="_blank" href="https://github.com/marcusnielsen/rxjs-server/tree/master/web-application">
+                        rxjs-server
+                    </a>      
+                </div>
+                <div class="project-body">
+                    A websocket server based on event sourcing and RxJS.
+                </div>
+              
+          </li>
+            </ul>
+            
       </div>
       <div class="section">
-        <h2 id="contact">contact</h2>
+        <h2 id="contact">mailboxes</h2>
         <p>
           <ul>
             <li>
