--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <a href="#about">std:out</a>
           </li>
           <li class="list-inline-item">
-            <a href="#projects">inventions</a>
+            <a href="#projects">log</a>
           </li>
           <li class="list-inline-item">
-            <a href="#contact">mailboxes</a>
+            <a href="#contact">std:in</a>
           </li>
         </ul>
       </div>
@@ -40,7 +40,7 @@
         </p>  
       </div>
       <div class="section">
-        <h2 id="projects">inventions</h2>
+        <h2 id="projects">log</h2>
             <ul class="projects">
                 <li>
                     <div class="project-title">
@@ -76,17 +76,17 @@
             
       </div>
       <div class="section">
-        <h2 id="contact">mailboxes</h2>
+        <h2 id="contact">std:in</h2>
         <p>
           <ul>
             <li>
-              twitter: <a target="_blank" href="https://twitter.com/marcusnielsen">twitter.com/marcusnielsen</a>
+              <a target="_blank" href="https://twitter.com/marcusnielsen">twitter</a>
             </li>
             <li>
-              github: <a target="_blank" href="https://github.com/marcusnielsen/">github.com/marcusnielsen/</a>
+              <a target="_blank" href="https://github.com/marcusnielsen/">github</a>
             </li>
             <li>
-              linkedin: <a target="_blank" href="https://www.linkedin.com/in/marcusnielsendeveloper">linkedin.com/in/marcusnielsendeveloper</a>
+              <a target="_blank" href="https://www.linkedin.com/in/marcusnielsendeveloper">linkedin</a>
             </li>
           </ul>
         </p>
