--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   <body>
     <div class="wrapper">
       <div class="menu">
-        <h1 class="title">
+        <span class="title">
           <a href="#" data-title></a>
-        </h1>
+        </span>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="#about">std:out</a>
+            <a href="#about" data-anchor-scroll>std:out</a>
           </li>
           <li class="list-inline-item">
-            <a href="#projects">log</a>
+            <a href="#projects" data-anchor-scroll>log</a>
           </li>
           <li class="list-inline-item">
-            <a href="#contact">std:in</a>
+            <a href="#contact" data-anchor-scroll>std:in</a>
           </li>
         </ul>
       </div>
